--- a/drivers/misc/mediatek/connectivity/gps/Makefile
+++ b/drivers/misc/mediatek/connectivity/gps/Makefile
@@ -52,7 +52,7 @@ ccflags-y += -I$(srctree)/drivers/devfreq
 ###############################################################################
 
 MODULE_NAME := gps_drv
-obj-m += $(MODULE_NAME).o
+obj-$(CONFIG_MTK_COMBO_GPS) += $(MODULE_NAME).o
 
 WMT_SRC_FOLDER := $(srctree)/drivers/misc/mediatek/connectivity/common
 
