mediatek: connectivity: Fix typos
Need to add slash at the end of line to make linker
think it's a directory, not a file.

Signed-off-by: Hendra Manudinata <hendra@manudinata.me>

--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -47,10 +47,10 @@ endif
 
     ifeq ($(CONFIG_WLAN_DRV_BUILD_IN),y)
         # Do build-in for xxx.c checking
-        subdir-ccflags-y += -D MTK_WCN_REMOVE_KERNEL_MODULE
-        subdir-ccflags-y += -D MTK_WCN_BUILT_IN_DRIVER
+        subdir-ccflags-y += -DMTK_WCN_REMOVE_KERNEL_MODULE
+        subdir-ccflags-y += -DMTK_WCN_BUILT_IN_DRIVER
         obj-y += common/
-        obj-y += wlan/adaptor
+        obj-y += wlan/adaptor/
         obj-y += wlan/core/gen4m/
     endif
 
