--- a/arch/arm64/configs/dandelion_defconfig
+++ b/arch/arm64/configs/dandelion_defconfig
@@ -179,16 +179,15 @@ CONFIG_MTK_MD1_SUPPORT=12
 CONFIG_MTK_C2K_LTE_MODE=2
 CONFIG_MTK_COMBO=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6765=y
-CONFIG_MTK_COMBO_BT=y
-CONFIG_MTK_COMBO_GPS=y
-CONFIG_MTK_COMBO_WIFI=y
+CONFIG_MTK_COMBO_BT=m
+CONFIG_MTK_COMBO_GPS=m
+CONFIG_MTK_COMBO_WIFI=m
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_GPS_SUPPORT=y
-CONFIG_MTK_GPS_EMI=y
-CONFIG_MTK_FMRADIO=y
+CONFIG_MTK_GPS_EMI=m
+CONFIG_MTK_FMRADIO=m
 CONFIG_MTK_FM_CHIP="MT6631_FM"
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
-CONFIG_WLAN_DRV_BUILD_IN=y
 CONFIG_MTK_ECCCI_DRIVER=y
 CONFIG_MTK_ECCCI_C2K=y
 CONFIG_MTK_BTIF=y
